--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -1,111 +1,127 @@
 version: "2.0"
 
 nlu:
-- intent: greet
-  examples: |
-    - hey
-    - hello
-    - hi
-    - hello there
-    - good morning
-    - good evening
-    - hey there
-    - let's go
-    - hey dude
-    - goodmorning
-    - goodevening
-    - good afternoon
-    
-- intent: supply_info
-  examples: |
-    - My name is [John](name). claim id is [ABCDEFGH](claim_id).
-    - name: [David](name) id:[ABCDEFGH](claim_id).
-    - Yeah sure. I'm [Barbara](name). My id is [ABCDEFGH](claim_id).
-    - [Susan](name), [ABCDEFGH](claim_id).
-    - Sure. It's [Fred](name). My id is [ABCDEFGH](claim_id).    
+  - intent: greet
+    examples: |
+      - hey
+      - hello
+      - hi
+      - hello there
+      - good morning
+      - good evening
+      - hey there
+      - let's go
+      - hey dude
+      - goodmorning
+      - goodevening
+      - good afternoon
 
-- intent: check_policies
-  examples: |
-    - Hey, I would like to know about the insurance policies you offer.
-    - What type of insurance policies do you offer?  
+  - intent: supply_info
+    examples: |
+      - My name is [John](name). claim id is [ABCDEFGH](claim_id).
+      - name: [David](name) id:[ABCDEFGH](claim_id).
+      - Yeah sure. I'm [Barbara](name). My id is [ABCDEFGH](claim_id).
+      - [Susan](name), [ABCDEFGH](claim_id).
+      - Sure. It's [Fred](name). My id is [ABCDEFGH](claim_id).
 
-- intent: check_claim_status
-  examples: |
-    - Hey I would like to check the claim status for a claim i filed.
-    - Can you please tell me my claim status.
+  - intent: check_policies
+    examples: |
+      - Hey, I would like to know about the insurance policies you offer.
+      - What type of insurance policies do you offer?
 
+  - intent: check_claim_status
+    examples: |
+      - Hey I would like to check the claim status for a claim i filed.
+      - Can you please tell me my claim status.
 
-  
-- intent: goodbye
-  examples: |
-    - good afternoon
-    - cu
-    - good by
-    - cee you later
-    - good night
-    - bye
-    - goodbye
-    - have a nice day
-    - see you around
-    - bye bye
-    - see you later
+  - intent: goodbye
+    examples: |
+      - good afternoon
+      - cu
+      - good by
+      - cee you later
+      - good night
+      - bye
+      - goodbye
+      - have a nice day
+      - see you around
+      - bye bye
+      - see you later
 
-- intent: affirm
-  examples: |
-    - yes
-    - y
-    - indeed
-    - of course
-    - that sounds good
-    - correct
+  - intent: affirm
+    examples: |
+      - yes
+      - y
+      - indeed
+      - of course
+      - that sounds good
+      - correct
 
-- intent: deny
-  examples: |
-    - no
-    - n
-    - never
-    - I don't think so
-    - don't like that
-    - no way
-    - not really
+  - intent: deny
+    examples: |
+      - no
+      - n
+      - never
+      - I don't think so
+      - don't like that
+      - no way
+      - not really
 
-- intent: mood_great
-  examples: |
-    - perfect
-    - great
-    - amazing
-    - feeling like a king
-    - wonderful
-    - I am feeling very good
-    - I am great
-    - I am amazing
-    - I am going to save the world
-    - super stoked
-    - extremely good
-    - so so perfect
-    - so good
-    - so perfect
+  - intent: mood_great
+    examples: |
+      - perfect
+      - great
+      - amazing
+      - feeling like a king
+      - wonderful
+      - I am feeling very good
+      - I am great
+      - I am amazing
+      - I am going to save the world
+      - super stoked
+      - extremely good
+      - so so perfect
+      - so good
+      - so perfect
 
-- intent: mood_unhappy
-  examples: |
-    - my day was horrible
-    - I am sad
-    - I don't feel very well
-    - I am disappointed
-    - super sad
-    - I'm so sad
-    - sad
-    - very sad
-    - unhappy
-    - not good
-    - not very good
-    - extremly sad
-    - so saad
-    - so sad
+  - intent: mood_unhappy
+    examples: |
+      - my day was horrible
+      - I am sad
+      - I don't feel very well
+      - I am disappointed
+      - super sad
+      - I'm so sad
+      - sad
+      - very sad
+      - unhappy
+      - not good
+      - not very good
+      - extremly sad
+      - so saad
+      - so sad
 
-- intent: bot_challenge
-  examples: |
-    - are you a bot?
-    - are you a human?
-    - am I talking to a bot?
-    - am I talking to a human?
+  - intent: bot_challenge
+    examples: |
+      - are you a bot?
+      - are you a human?
+      - am I talking to a bot?
+      - am I talking to a human?
+
+  #filing a new claim
+  - intent: file_a_claim
+    examples: |
+      - file a claim
+      - make a claim
+      - i need to file a claim
+      - submit a claim
+      - submit a new claim
+      - make a new claim
+      - file a new claim
+
+  -intent: provide_uname
+    examples: |
+      - [John](uname).
+      - Sure. I am registered as [Susan](uname).
+      - My username is [Barbara](uname).
+      - My name is [Barbara](uname).
