--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -18,7 +18,7 @@ nlu:
     
 - intent: supply_info
   examples: |
-    - My name is [John](name). claim id is [ABCDEFGH](claim_id).
+    - My name is [John](name). claim id is [fghjkl](claim_id).
     - name: [David](name) id:[ABCDEFGH](claim_id).
     - Yeah sure. I'm [Barbara](name). My id is [ABCDEFGH](claim_id).
     - [Susan](name), [ABCDEFGH](claim_id).
